src/libqmessagebox.h

typedef struct QWidget QWidget;
int QMessageBox_Information6(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1, int button2);
int QMessageBox_Information54(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text);
int QMessageBox_Information62(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text);
int QMessageBox_Information7(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber);
int QMessageBox_Information8(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);
int QMessageBox_Question52(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1);
int QMessageBox_Question6(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1, int button2);
int QMessageBox_Question53(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text);
int QMessageBox_Question62(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text);
int QMessageBox_Question7(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber);
int QMessageBox_Question8(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);
int QMessageBox_Warning6(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1, int button2);
int QMessageBox_Warning52(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text);
int QMessageBox_Warning62(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text);
int QMessageBox_Warning7(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber);
int QMessageBox_Warning8(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);
int QMessageBox_Critical6(QWidget* parent, libqt_string title, libqt_string text, int button0, int button1, int button2);
int QMessageBox_Critical52(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text);
int QMessageBox_Critical62(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text);
int QMessageBox_Critical7(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber);
int QMessageBox_Critical8(QWidget* parent, libqt_string title, libqt_string text, libqt_string button0Text, libqt_string button1Text, libqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);