src/libqmessagebox.bf

	[LinkName("QMessageBox_Information6")]
	public static extern int32 QMessageBox_Information6(QWidget parent, char8[] title, char8[] text, int32 button0, int32 button1, int32 button2);
	[LinkName("QMessageBox_Information54")]
	public static extern int32 QMessageBox_Information54(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text);
	[LinkName("QMessageBox_Information62")]
	public static extern int32 QMessageBox_Information62(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text);
	[LinkName("QMessageBox_Information7")]
	public static extern int32 QMessageBox_Information7(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber);
	[LinkName("QMessageBox_Information8")]
	public static extern int32 QMessageBox_Information8(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber, int32 escapeButtonNumber);
	[LinkName("QMessageBox_Question52")]
	public static extern int32 QMessageBox_Question52(QWidget parent, char8[] title, char8[] text, int32 button0, int32 button1);
	[LinkName("QMessageBox_Question6")]
	public static extern int32 QMessageBox_Question6(QWidget parent, char8[] title, char8[] text, int32 button0, int32 button1, int32 button2);
	[LinkName("QMessageBox_Question53")]
	public static extern int32 QMessageBox_Question53(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text);
	[LinkName("QMessageBox_Question62")]
	public static extern int32 QMessageBox_Question62(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text);
	[LinkName("QMessageBox_Question7")]
	public static extern int32 QMessageBox_Question7(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber);
	[LinkName("QMessageBox_Question8")]
	public static extern int32 QMessageBox_Question8(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber, int32 escapeButtonNumber);
	[LinkName("QMessageBox_Warning6")]
	public static extern int32 QMessageBox_Warning6(QWidget parent, char8[] title, char8[] text, int32 button0, int32 button1, int32 button2);
	[LinkName("QMessageBox_Warning52")]
	public static extern int32 QMessageBox_Warning52(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text);
	[LinkName("QMessageBox_Warning62")]
	public static extern int32 QMessageBox_Warning62(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text);
	[LinkName("QMessageBox_Warning7")]
	public static extern int32 QMessageBox_Warning7(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber);
	[LinkName("QMessageBox_Warning8")]
	public static extern int32 QMessageBox_Warning8(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber, int32 escapeButtonNumber);
	[LinkName("QMessageBox_Critical6")]
	public static extern int32 QMessageBox_Critical6(QWidget parent, char8[] title, char8[] text, int32 button0, int32 button1, int32 button2);
	[LinkName("QMessageBox_Critical52")]
	public static extern int32 QMessageBox_Critical52(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text);
	[LinkName("QMessageBox_Critical62")]
	public static extern int32 QMessageBox_Critical62(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text);
	[LinkName("QMessageBox_Critical7")]
	public static extern int32 QMessageBox_Critical7(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber);
	[LinkName("QMessageBox_Critical8")]
	public static extern int32 QMessageBox_Critical8(QWidget parent, char8[] title, char8[] text, char8[] button0Text, char8[] button1Text, char8[] button2Text, int32 defaultButtonNumber, int32 escapeButtonNumber);
}